<resources>
    <string name="app_name">D-One</string>
    <string name="please_wait">Please wait</string>
    <string name="loading">Loading…</string>
    <string name="json_exception">Error while parsing result</string>
    <string name="db_not_available">Constraint issue </string>
    <string name="invalid_credential">Invalid Credentials</string>
    <string name="server_error">Server Error</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="internet_conn_fail">No Internet Connection</string>
    <string name="data_not_available">Data not available.</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notification">Notification</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="i_already_have_an_account">I already have an Account</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="your_name">Your Name</string>
    <string name="register_an_account">Register\nan Account</string>
    <string name="type_your_phone_number">Type your phone number</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="verify_mobile_number">Verify\nMobile Number</string>
    <string name="enter_a_4_digit_pin_sent_to_your_phone_number">Enter a 4-Digit Pin sent to your phone number</string>
    <string name="order_history">Order History</string>
    <string name="my_favourites">My Favourites</string>
    <string name="all_categories">All Categories</string>
    <string name="my_cart">My Cart</string>
    <string name="recommended_products">Recommended Products</string>
    <string name="my_profile">My Profile</string>
    <string name="history">History</string>
    <string name="take_a_photo">Upload</string>
    <string name="nearby_restaurants">Nearby Restaurants</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="alert">Alert!</string>
    <string name="btn_continue">Continue</string>
    <string name="i_already_have_a_pin">I already have a pin</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="forgot_npassword">Forgot\nPassword?</string>
    <string name="restaurants">Restaurants</string>
    <string name="groceries">Groceries</string>
    <string name="search_for_anything">Search for anything…</string>
    <string name="login_with_password">Login with password</string>
    <string name="username_field_empty">Username field can\'t be empty!</string>
    <string name="settings">Settings</string>
    <string name="verification_field_empty">Verification field cannot be empty!</string>
    <string name="verification_code_sent">Verification code has been sent Successfully!</string>
    <string name="login_with_sms">Login with sms</string>
    <string name="product_description">Product Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="order_now">Order Now</string>
    <string name="_1">1</string>
    <string name="move_to_wishlist">Move to Wishlist</string>
    <string name="order_this_only">Order This Only</string>
    <string name="retry">Retry</string>
    <string name="you_havent_logged_in_yet">You haven\'t logged in yet.</string>
    <string name="item_added_to_cart">Item added to Cart!</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="you_can_simply_pay_for_all_the_items_upon_ndelivery_of_the_product">You can simply pay for all the items upon\ndelivery of the product.</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="no_item_in_your_cart">There are no items in your cart!</string>
    <string name="no_item_in_your_order">You have not had any order yet!</string>
    <string name="browse">Browse</string>
    <string name="select_a_payment">Select A Payment</string>
    <string name="remove">Remove</string>
    <string name="feature_not_available_at_the_moment">This feature is not available at the moment!</string>
    <string name="custom_address">Custom Address</string>
    <string name="show_more">Show More</string>
    <string name="my_address">My Address</string>
    <string name="select">Select</string>
    <string name="city">Street</string>
    <string name="district">District</string>
    <string name="local_area">Local Area</string>
    <string name="enter_your_area">Enter your area</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_summary">Order Summary</string>
    <string name="back_to_home">Back to Home</string>
    <string name="choose_address">Choose Address</string>
    <string name="select_district_first_to_get_street">Please select district first to get street!</string>
    <string name="district_field_cannot_be_empty">District field cannot be empty!</string>
    <string name="street_field_cannot_be_empty">Street field cannot be empty!</string>
    <string name="local_area_field_cannot_be_empty">Local area field cannot be empty!</string>
    <string name="exit">Exit</string>
    <string name="profile_details">Profile Details</string>
    <string name="name">Name</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="street">Street</string>
    <string name="local_address">Local Address</string>
    <string name="edit">Edit</string>
    <string name="item_removed_from_cart">Item removed from cart!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_valid_otp">Please enter valid otp!</string>
    <string name="enter_valid_mobile_number">Please enter correct mobile number!</string>
    <string name="menu_items">Menu Items</string>
    <string name="capture">Capture</string>
    <string name="profile_successfully_updated">Profile Successfully Updated!</string>
    <string name="retake">Retake</string>
    <string name="upload">Upload</string>
    <string name="appointment">Appointment</string>
    <string name="notification_channel_id">default</string>
    <string name="subscribed">Subscribed to news topic</string>
    <string name="unsubscribed">Unsubscribed from news topic</string>
    <string name="select_image_first_to_proceed">Please select image first to proceed!</string>
    <string name="image_taken_successfully_now_you_are_ready_to_upload_please_press_upload_to_proceed">Image taken successfully, now you are ready to upload. Please press upload to proceed?</string>
    <string name="file_uploaded_successfully">File Uploaded Successfully!</string>
    <string name="name_field_cannot_be_empty">Name field cannot be empty!</string>
    <string name="rate_this_product">Rate this Product?</string>
    <string name="no_data_available_to_load">No Data available to load!</string>
</resources>