<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/home" />
        <item
            android:icon="@drawable/ic_nav_history"
            android:title="@string/history" />

        <item
            android:icon="@drawable/ic_nav_camera"
            android:title="@string/take_a_photo" />
        <item
            android:icon="@drawable/ic_nav_cart"
            android:title="@string/cart" />

        <item
            android:icon="@drawable/ic_nav_profile"
            android:title="@string/profile" />
    </group>

</menu>