<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_EBEBEB"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".feature.auth.screens.resetpin.ResetPinActivity">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_30"
                android:layout_marginTop="@dimen/spacing_48"
                android:layout_marginEnd="@dimen/spacing_30"
                android:text="@string/forgot_npassword"
                android:textColor="@color/black_000000"
                android:textSize="@dimen/text_size_24"
                app:fontFamily="@font/roboto_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_30"
                android:layout_marginTop="@dimen/spacing_48"
                android:layout_marginEnd="@dimen/spacing_30"
                android:text="@string/new_password"
                android:textColor="@color/black_000000"
                android:textSize="@dimen/text_size_14"
                app:fontFamily="@font/roboto_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey_8798AD"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="@dimen/spacing_8"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textColor="@color/black_000000"
                android:textColorHint="@color/grey_636161"
                android:textSize="@dimen/text_size_14"
                app:fontFamily="@font/roboto_light"
                app:layout_constraintEnd_toEndOf="@id/tv_title_password"
                app:layout_constraintStart_toStartOf="@id/tv_title_password"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_30"
                android:layout_marginTop="@dimen/spacing_16"
                android:layout_marginEnd="@dimen/spacing_30"
                android:text="@string/confirm_password"
                android:textColor="@color/black_000000"
                android:textSize="@dimen/text_size_14"
                app:fontFamily="@font/roboto_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey_8798AD"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="@dimen/spacing_8"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textColor="@color/black_000000"
                android:textColorHint="@color/grey_636161"
                android:textSize="@dimen/text_size_14"
                app:fontFamily="@font/roboto_light"
                app:layout_constraintEnd_toEndOf="@id/tv_title_confirm_password"
                app:layout_constraintStart_toStartOf="@id/tv_title_confirm_password"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_confirm_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_continue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_48"
                android:background="@drawable/bg_button_circular_red"
                android:text="@string/btn_continue"
                app:layout_constraintEnd_toEndOf="@+id/et_confirm_password"
                app:layout_constraintStart_toStartOf="@+id/et_confirm_password"
                app:layout_constraintTop_toBottomOf="@+id/et_confirm_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>