<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".feature.main.screens.profile.edit.EditProfileActivity">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_left" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_edit_profile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/spacing_24"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_marginEnd="@dimen/spacing_24"
                android:padding="@dimen/spacing_48"
                app:layout_constraintDimensionRatio="4:3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/vc_edit_profile" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_30"
                android:layout_marginTop="@dimen/spacing_48"
                android:layout_marginEnd="@dimen/spacing_30"
                android:text="@string/edit_profile"
                android:textColor="@color/black_2e384d"
                android:textSize="@dimen/text_size_24"
                app:fontFamily="@font/roboto_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_edit_profile" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_30"
                android:layout_marginTop="@dimen/spacing_16"
                android:layout_marginEnd="@dimen/spacing_30"
                android:text="@string/your_name"
                android:textColor="@color/black_000000"
                android:textSize="@dimen/text_size_14"
                app:fontFamily="@font/roboto_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey_8798AD"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="@dimen/spacing_8"
                android:hint="@string/enter_your_full_name"
                android:inputType="textPersonName"
                android:textColor="@color/black_000000"
                android:textColorHint="@color/grey_636161"
                android:textSize="@dimen/text_size_14"
                app:fontFamily="@font/roboto_light"
                app:layout_constraintEnd_toEndOf="@id/tv_title_name"
                app:layout_constraintStart_toStartOf="@id/tv_title_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_30"
                android:layout_marginTop="@dimen/spacing_16"
                android:layout_marginEnd="@dimen/spacing_30"
                android:text="@string/email_address"
                android:textColor="@color/black_000000"
                android:textSize="@dimen/text_size_14"
                app:fontFamily="@font/roboto_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey_8798AD"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/spacing_8"
                android:hint="@string/enter_your_email_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/black_000000"
                android:textColorHint="@color/grey_636161"
                android:textSize="@dimen/text_size_14"
                app:fontFamily="@font/roboto_light"
                app:layout_constraintEnd_toEndOf="@id/tv_title_email"
                app:layout_constraintStart_toStartOf="@id/tv_title_email"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_email" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_30"
                android:layout_marginTop="@dimen/spacing_16"
                android:layout_marginEnd="@dimen/spacing_30"
                android:text="@string/phone_number"
                android:textColor="@color/black_000000"
                android:textSize="@dimen/text_size_14"
                app:fontFamily="@font/roboto_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey_8798AD"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="@dimen/spacing_8"
                android:hint="@string/enter_your_phone_number"
                android:inputType="number"
                android:enabled="false"
                android:textColor="@color/black_000000"
                android:textColorHint="@color/grey_636161"
                android:textSize="@dimen/text_size_14"
                app:fontFamily="@font/roboto_light"
                app:layout_constraintEnd_toEndOf="@id/tv_title_phone_number"
                app:layout_constraintStart_toStartOf="@id/tv_title_phone_number"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_phone_number" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_24"
                android:background="@drawable/bg_button_circular_red"
                android:text="@string/edit_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_title_name"
                app:layout_constraintStart_toStartOf="@+id/tv_title_name"
                app:layout_constraintTop_toBottomOf="@+id/et_phone_number"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>